fix z-index so links are still clickable

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
   position: relative;
 }
 
+#issue-image-container a {
+  position: relative;
+  z-index: 2;
+}
+
 .issue-images {
   top: -40px;
   left: -40px;
